--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-intersection-observer": "^9.4.4",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.2",
     "react-tilt": "^1.0.2",
     "tailwind-merge": "^1.13.1",
