--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@react-hook/mouse-position": "^4.1.3",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "framer-motion": "^10.12.12",
+    "framer-motion": "^10.12.18",
     "lucide-react": "^0.241.0",
     "react": "^18.2.0",
     "react-curved-text": "^2.0.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-intersection-observer": "^9.5.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.2",
     "react-tilt": "^1.0.2",
