--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^1.2.1",
     "framer-motion": "^10.12.18",
     "lucide-react": "^0.241.0",
+    "netlify-plugin-cloudinary": "^1.2.0",
     "react": "^18.2.0",
     "react-curved-text": "^2.0.2",
     "react-dom": "^18.2.0",
