--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/react": "^18.2.9",
+    "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.4",
+    "@types/uuid": "^9.0.2",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
