--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "netlify-plugin-cloudinary": "^1.2.0",
     "react": "^18.2.0",
     "react-curved-text": "^2.0.2",
+    "react-helmet-async": "^1.3.0",
     "react-intersection-observer": "^9.5.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.2",
