--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.2",
-    "tailwind-merge": "^1.13.1",
-    "tailwindcss-animate": "^1.0.6"
+    "tailwind-merge": "^1.13.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.9",
