--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ebay/nice-modal-react": "^1.2.10",
+    "@emailjs/browser": "^3.11.0",
+    "@hookform/resolvers": "^3.1.1",
     "@react-hook/mouse-position": "^4.1.3",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.12.18",
     "lucide-react": "^0.241.0",
     "netlify-plugin-cloudinary": "^1.2.0",
     "react": "^18.2.0",
     "react-curved-text": "^2.0.2",
+    "react-hook-form": "^7.45.2",
     "react-intersection-observer": "^9.5.2",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.11.2",
-    "tailwind-merge": "^1.13.1"
+    "tailwind-merge": "^1.13.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
